Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LCURLYEBR
    LEN
    LSQBR
    QUESTION
    RCURLYEBR

Grammar

Rule 0     S' -> prog
Rule 1     prog -> func_list
Rule 2     empty -> <empty>
Rule 3     func_list -> funk
Rule 4     func_list -> funk func_list
Rule 5     func_list -> <empty>
Rule 6     funk -> FUNK ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LBRACE body RBRACE
Rule 7     funk -> FUNK ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN RETURN_ARROW expr SEMI_COLON
Rule 8     funk -> error
Rule 9     body -> stmt_list
Rule 10    stmt_list -> stmt
Rule 11    stmt_list -> stmt stmt_list
Rule 12    stmt_list -> <empty>
Rule 13    stmt -> expr SEMI_COLON
Rule 14    stmt -> expr EQUAL expr SEMI_COLON
Rule 15    stmt -> defvar SEMI_COLON
Rule 16    defvar -> ID COLON_COLON type
Rule 17    defvar -> ID COLON_COLON type EQUAL expr
Rule 18    stmt -> PRINT expr SEMI_COLON
Rule 19    stmt -> IF LDBLBR expr RDBLBR stmt
Rule 20    stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 21    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 22    stmt -> DO stmt WHILE LPAREN expr RPAREN SEMI_COLON
Rule 23    stmt -> FOR LPAREN ID EQUAL expr TO expr RPAREN stmt
Rule 24    stmt -> BEGIN body END
Rule 25    stmt -> RETURN expr SEMI_COLON
Rule 26    flist -> empty
Rule 27    flist -> ID AS type
Rule 28    flist -> ID AS type COMMA flist
Rule 29    clist -> empty
Rule 30    clist -> expr
Rule 31    clist -> expr COMMA clist
Rule 32    type -> INT
Rule 33    type -> VECTOR
Rule 34    type -> STR
Rule 35    type -> MSTR
Rule 36    type -> BOOL
Rule 37    type -> NULL
Rule 38    expr -> expr LSQUAREBR expr RSQUAREBR
Rule 39    expr -> LSQUAREBR clist RSQUAREBR
Rule 40    expr -> expr QMARK expr COLON expr
Rule 41    expr -> expr PLUS expr
Rule 42    expr -> expr MINUS expr
Rule 43    expr -> expr MULTIPLY expr
Rule 44    expr -> expr DIVIDE expr
Rule 45    expr -> expr GREATER_THAN expr
Rule 46    expr -> expr LESS_THAN expr
Rule 47    expr -> expr EQEQ expr
Rule 48    expr -> expr GTEQ expr
Rule 49    expr -> expr LTEQ expr
Rule 50    expr -> expr NEQ expr
Rule 51    expr -> expr OR expr
Rule 52    expr -> expr AND expr
Rule 53    expr -> NOT expr
Rule 54    expr -> MINUS expr
Rule 55    expr -> ID LPAREN expr RPAREN
Rule 56    expr -> ID LPAREN clist RPAREN
Rule 57    expr -> ID
Rule 58    expr -> NUMBER
Rule 59    expr -> STRING
Rule 60    expr -> MSTRING
Rule 61    expr -> TRUE
Rule 62    expr -> FALSE
Rule 63    expr -> NULL
Rule 64    expr -> LPAREN expr RPAREN

Terminals, with rules where they appear

AND                  : 52
AS                   : 27 28
BEGIN                : 24
BOOL                 : 36
COLON                : 40
COLON_COLON          : 16 17
COMMA                : 28 31
DIVIDE               : 44
DO                   : 22
ELSE                 : 20
END                  : 24
EQEQ                 : 47
EQUAL                : 14 17 23
FALSE                : 62
FOR                  : 23
FUNK                 : 6 7
GREATER_THAN         : 6 7 45
GTEQ                 : 48
ID                   : 6 7 16 17 23 27 28 55 56 57
IF                   : 19 20
INT                  : 32
LBRACE               : 6
LCURLYEBR            : 
LDBLBR               : 19
LEN                  : 
LESS_THAN            : 6 7 46
LPAREN               : 6 7 20 21 22 23 55 56 64
LSQBR                : 
LSQUAREBR            : 38 39
LTEQ                 : 49
MINUS                : 42 54
MSTR                 : 35
MSTRING              : 60
MULTIPLY             : 43
NEQ                  : 50
NOT                  : 53
NULL                 : 37 63
NUMBER               : 58
OR                   : 51
PLUS                 : 41
PRINT                : 18
QMARK                : 40
QUESTION             : 
RBRACE               : 6
RCURLYEBR            : 
RDBLBR               : 19
RETURN               : 25
RETURN_ARROW         : 7
RPAREN               : 6 7 20 21 22 23 55 56 64
RSQUAREBR            : 38 39
SEMI_COLON           : 7 13 14 15 18 22 25
STR                  : 34
STRING               : 59
TO                   : 23
TRUE                 : 61
VECTOR               : 33
WHILE                : 21 22
error                : 8

Nonterminals, with rules where they appear

body                 : 6 24
clist                : 31 39 56
defvar               : 15
empty                : 26 29
expr                 : 7 13 14 14 17 18 19 20 21 22 23 23 25 30 31 38 38 40 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 55 64
flist                : 6 7 28
func_list            : 1 4
funk                 : 3 4
prog                 : 0
stmt                 : 10 11 19 20 20 21 22 23
stmt_list            : 9 11
type                 : 6 7 16 17 27 28

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . func_list
    (3) func_list -> . funk
    (4) func_list -> . funk func_list
    (5) func_list -> .
    (6) funk -> . FUNK ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LBRACE body RBRACE
    (7) funk -> . FUNK ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN RETURN_ARROW expr SEMI_COLON
    (8) funk -> . error

    $end            reduce using rule 5 (func_list -> .)
    FUNK            shift and go to state 4
    error           shift and go to state 5

    prog                           shift and go to state 1
    func_list                      shift and go to state 2
    funk                           shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> func_list .

    $end            reduce using rule 1 (prog -> func_list .)


state 3

    (3) func_list -> funk .
    (4) func_list -> funk . func_list
    (3) func_list -> . funk
    (4) func_list -> . funk func_list
    (5) func_list -> .
    (6) funk -> . FUNK ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LBRACE body RBRACE
    (7) funk -> . FUNK ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN RETURN_ARROW expr SEMI_COLON
    (8) funk -> . error

  ! reduce/reduce conflict for $end resolved using rule 3 (func_list -> funk .)
    $end            reduce using rule 3 (func_list -> funk .)
    FUNK            shift and go to state 4
    error           shift and go to state 5

  ! $end            [ reduce using rule 5 (func_list -> .) ]

    funk                           shift and go to state 3
    func_list                      shift and go to state 6

state 4

    (6) funk -> FUNK . ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LBRACE body RBRACE
    (7) funk -> FUNK . ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN RETURN_ARROW expr SEMI_COLON

    ID              shift and go to state 7


state 5

    (8) funk -> error .

    FUNK            reduce using rule 8 (funk -> error .)
    error           reduce using rule 8 (funk -> error .)
    $end            reduce using rule 8 (funk -> error .)


state 6

    (4) func_list -> funk func_list .

    $end            reduce using rule 4 (func_list -> funk func_list .)


state 7

    (6) funk -> FUNK ID . LPAREN flist RPAREN LESS_THAN type GREATER_THAN LBRACE body RBRACE
    (7) funk -> FUNK ID . LPAREN flist RPAREN LESS_THAN type GREATER_THAN RETURN_ARROW expr SEMI_COLON

    LPAREN          shift and go to state 8


state 8

    (6) funk -> FUNK ID LPAREN . flist RPAREN LESS_THAN type GREATER_THAN LBRACE body RBRACE
    (7) funk -> FUNK ID LPAREN . flist RPAREN LESS_THAN type GREATER_THAN RETURN_ARROW expr SEMI_COLON
    (26) flist -> . empty
    (27) flist -> . ID AS type
    (28) flist -> . ID AS type COMMA flist
    (2) empty -> .

    ID              shift and go to state 9
    RPAREN          reduce using rule 2 (empty -> .)

    flist                          shift and go to state 10
    empty                          shift and go to state 11

state 9

    (27) flist -> ID . AS type
    (28) flist -> ID . AS type COMMA flist

    AS              shift and go to state 12


state 10

    (6) funk -> FUNK ID LPAREN flist . RPAREN LESS_THAN type GREATER_THAN LBRACE body RBRACE
    (7) funk -> FUNK ID LPAREN flist . RPAREN LESS_THAN type GREATER_THAN RETURN_ARROW expr SEMI_COLON

    RPAREN          shift and go to state 13


state 11

    (26) flist -> empty .

    RPAREN          reduce using rule 26 (flist -> empty .)


state 12

    (27) flist -> ID AS . type
    (28) flist -> ID AS . type COMMA flist
    (32) type -> . INT
    (33) type -> . VECTOR
    (34) type -> . STR
    (35) type -> . MSTR
    (36) type -> . BOOL
    (37) type -> . NULL

    INT             shift and go to state 15
    VECTOR          shift and go to state 16
    STR             shift and go to state 17
    MSTR            shift and go to state 18
    BOOL            shift and go to state 19
    NULL            shift and go to state 20

    type                           shift and go to state 14

state 13

    (6) funk -> FUNK ID LPAREN flist RPAREN . LESS_THAN type GREATER_THAN LBRACE body RBRACE
    (7) funk -> FUNK ID LPAREN flist RPAREN . LESS_THAN type GREATER_THAN RETURN_ARROW expr SEMI_COLON

    LESS_THAN       shift and go to state 21


state 14

    (27) flist -> ID AS type .
    (28) flist -> ID AS type . COMMA flist

    RPAREN          reduce using rule 27 (flist -> ID AS type .)
    COMMA           shift and go to state 22


state 15

    (32) type -> INT .

    COMMA           reduce using rule 32 (type -> INT .)
    RPAREN          reduce using rule 32 (type -> INT .)
    GREATER_THAN    reduce using rule 32 (type -> INT .)
    EQUAL           reduce using rule 32 (type -> INT .)
    SEMI_COLON      reduce using rule 32 (type -> INT .)


state 16

    (33) type -> VECTOR .

    COMMA           reduce using rule 33 (type -> VECTOR .)
    RPAREN          reduce using rule 33 (type -> VECTOR .)
    GREATER_THAN    reduce using rule 33 (type -> VECTOR .)
    EQUAL           reduce using rule 33 (type -> VECTOR .)
    SEMI_COLON      reduce using rule 33 (type -> VECTOR .)


state 17

    (34) type -> STR .

    COMMA           reduce using rule 34 (type -> STR .)
    RPAREN          reduce using rule 34 (type -> STR .)
    GREATER_THAN    reduce using rule 34 (type -> STR .)
    EQUAL           reduce using rule 34 (type -> STR .)
    SEMI_COLON      reduce using rule 34 (type -> STR .)


state 18

    (35) type -> MSTR .

    COMMA           reduce using rule 35 (type -> MSTR .)
    RPAREN          reduce using rule 35 (type -> MSTR .)
    GREATER_THAN    reduce using rule 35 (type -> MSTR .)
    EQUAL           reduce using rule 35 (type -> MSTR .)
    SEMI_COLON      reduce using rule 35 (type -> MSTR .)


state 19

    (36) type -> BOOL .

    COMMA           reduce using rule 36 (type -> BOOL .)
    RPAREN          reduce using rule 36 (type -> BOOL .)
    GREATER_THAN    reduce using rule 36 (type -> BOOL .)
    EQUAL           reduce using rule 36 (type -> BOOL .)
    SEMI_COLON      reduce using rule 36 (type -> BOOL .)


state 20

    (37) type -> NULL .

    COMMA           reduce using rule 37 (type -> NULL .)
    RPAREN          reduce using rule 37 (type -> NULL .)
    GREATER_THAN    reduce using rule 37 (type -> NULL .)
    EQUAL           reduce using rule 37 (type -> NULL .)
    SEMI_COLON      reduce using rule 37 (type -> NULL .)


state 21

    (6) funk -> FUNK ID LPAREN flist RPAREN LESS_THAN . type GREATER_THAN LBRACE body RBRACE
    (7) funk -> FUNK ID LPAREN flist RPAREN LESS_THAN . type GREATER_THAN RETURN_ARROW expr SEMI_COLON
    (32) type -> . INT
    (33) type -> . VECTOR
    (34) type -> . STR
    (35) type -> . MSTR
    (36) type -> . BOOL
    (37) type -> . NULL

    INT             shift and go to state 15
    VECTOR          shift and go to state 16
    STR             shift and go to state 17
    MSTR            shift and go to state 18
    BOOL            shift and go to state 19
    NULL            shift and go to state 20

    type                           shift and go to state 23

state 22

    (28) flist -> ID AS type COMMA . flist
    (26) flist -> . empty
    (27) flist -> . ID AS type
    (28) flist -> . ID AS type COMMA flist
    (2) empty -> .

    ID              shift and go to state 9
    RPAREN          reduce using rule 2 (empty -> .)

    flist                          shift and go to state 24
    empty                          shift and go to state 11

state 23

    (6) funk -> FUNK ID LPAREN flist RPAREN LESS_THAN type . GREATER_THAN LBRACE body RBRACE
    (7) funk -> FUNK ID LPAREN flist RPAREN LESS_THAN type . GREATER_THAN RETURN_ARROW expr SEMI_COLON

    GREATER_THAN    shift and go to state 25


state 24

    (28) flist -> ID AS type COMMA flist .

    RPAREN          reduce using rule 28 (flist -> ID AS type COMMA flist .)


state 25

    (6) funk -> FUNK ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN . LBRACE body RBRACE
    (7) funk -> FUNK ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN . RETURN_ARROW expr SEMI_COLON

    LBRACE          shift and go to state 26
    RETURN_ARROW    shift and go to state 27


state 26

    (6) funk -> FUNK ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LBRACE . body RBRACE
    (9) body -> . stmt_list
    (10) stmt_list -> . stmt
    (11) stmt_list -> . stmt stmt_list
    (12) stmt_list -> .
    (13) stmt -> . expr SEMI_COLON
    (14) stmt -> . expr EQUAL expr SEMI_COLON
    (15) stmt -> . defvar SEMI_COLON
    (18) stmt -> . PRINT expr SEMI_COLON
    (19) stmt -> . IF LDBLBR expr RDBLBR stmt
    (20) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (21) stmt -> . WHILE LPAREN expr RPAREN stmt
    (22) stmt -> . DO stmt WHILE LPAREN expr RPAREN SEMI_COLON
    (23) stmt -> . FOR LPAREN ID EQUAL expr TO expr RPAREN stmt
    (24) stmt -> . BEGIN body END
    (25) stmt -> . RETURN expr SEMI_COLON
    (38) expr -> . expr LSQUAREBR expr RSQUAREBR
    (39) expr -> . LSQUAREBR clist RSQUAREBR
    (40) expr -> . expr QMARK expr COLON expr
    (41) expr -> . expr PLUS expr
    (42) expr -> . expr MINUS expr
    (43) expr -> . expr MULTIPLY expr
    (44) expr -> . expr DIVIDE expr
    (45) expr -> . expr GREATER_THAN expr
    (46) expr -> . expr LESS_THAN expr
    (47) expr -> . expr EQEQ expr
    (48) expr -> . expr GTEQ expr
    (49) expr -> . expr LTEQ expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr OR expr
    (52) expr -> . expr AND expr
    (53) expr -> . NOT expr
    (54) expr -> . MINUS expr
    (55) expr -> . ID LPAREN expr RPAREN
    (56) expr -> . ID LPAREN clist RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . STRING
    (60) expr -> . MSTRING
    (61) expr -> . TRUE
    (62) expr -> . FALSE
    (63) expr -> . NULL
    (64) expr -> . LPAREN expr RPAREN
    (16) defvar -> . ID COLON_COLON type
    (17) defvar -> . ID COLON_COLON type EQUAL expr

    RBRACE          reduce using rule 12 (stmt_list -> .)
    PRINT           shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    DO              shift and go to state 38
    FOR             shift and go to state 39
    BEGIN           shift and go to state 40
    RETURN          shift and go to state 41
    LSQUAREBR       shift and go to state 42
    NOT             shift and go to state 44
    MINUS           shift and go to state 43
    ID              shift and go to state 28
    NUMBER          shift and go to state 45
    STRING          shift and go to state 46
    MSTRING         shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    NULL            shift and go to state 50
    LPAREN          shift and go to state 29

    body                           shift and go to state 30
    stmt_list                      shift and go to state 31
    stmt                           shift and go to state 32
    expr                           shift and go to state 33
    defvar                         shift and go to state 34

state 27

    (7) funk -> FUNK ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN RETURN_ARROW . expr SEMI_COLON
    (38) expr -> . expr LSQUAREBR expr RSQUAREBR
    (39) expr -> . LSQUAREBR clist RSQUAREBR
    (40) expr -> . expr QMARK expr COLON expr
    (41) expr -> . expr PLUS expr
    (42) expr -> . expr MINUS expr
    (43) expr -> . expr MULTIPLY expr
    (44) expr -> . expr DIVIDE expr
    (45) expr -> . expr GREATER_THAN expr
    (46) expr -> . expr LESS_THAN expr
    (47) expr -> . expr EQEQ expr
    (48) expr -> . expr GTEQ expr
    (49) expr -> . expr LTEQ expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr OR expr
    (52) expr -> . expr AND expr
    (53) expr -> . NOT expr
    (54) expr -> . MINUS expr
    (55) expr -> . ID LPAREN expr RPAREN
    (56) expr -> . ID LPAREN clist RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . STRING
    (60) expr -> . MSTRING
    (61) expr -> . TRUE
    (62) expr -> . FALSE
    (63) expr -> . NULL
    (64) expr -> . LPAREN expr RPAREN

    LSQUAREBR       shift and go to state 42
    NOT             shift and go to state 44
    MINUS           shift and go to state 43
    ID              shift and go to state 51
    NUMBER          shift and go to state 45
    STRING          shift and go to state 46
    MSTRING         shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    NULL            shift and go to state 50
    LPAREN          shift and go to state 29

    expr                           shift and go to state 52

state 28

    (55) expr -> ID . LPAREN expr RPAREN
    (56) expr -> ID . LPAREN clist RPAREN
    (57) expr -> ID .
    (16) defvar -> ID . COLON_COLON type
    (17) defvar -> ID . COLON_COLON type EQUAL expr

    LPAREN          shift and go to state 53
    SEMI_COLON      reduce using rule 57 (expr -> ID .)
    EQUAL           reduce using rule 57 (expr -> ID .)
    LSQUAREBR       reduce using rule 57 (expr -> ID .)
    QMARK           reduce using rule 57 (expr -> ID .)
    PLUS            reduce using rule 57 (expr -> ID .)
    MINUS           reduce using rule 57 (expr -> ID .)
    MULTIPLY        reduce using rule 57 (expr -> ID .)
    DIVIDE          reduce using rule 57 (expr -> ID .)
    GREATER_THAN    reduce using rule 57 (expr -> ID .)
    LESS_THAN       reduce using rule 57 (expr -> ID .)
    EQEQ            reduce using rule 57 (expr -> ID .)
    GTEQ            reduce using rule 57 (expr -> ID .)
    LTEQ            reduce using rule 57 (expr -> ID .)
    NEQ             reduce using rule 57 (expr -> ID .)
    OR              reduce using rule 57 (expr -> ID .)
    AND             reduce using rule 57 (expr -> ID .)
    COLON_COLON     shift and go to state 54


state 29

    (64) expr -> LPAREN . expr RPAREN
    (38) expr -> . expr LSQUAREBR expr RSQUAREBR
    (39) expr -> . LSQUAREBR clist RSQUAREBR
    (40) expr -> . expr QMARK expr COLON expr
    (41) expr -> . expr PLUS expr
    (42) expr -> . expr MINUS expr
    (43) expr -> . expr MULTIPLY expr
    (44) expr -> . expr DIVIDE expr
    (45) expr -> . expr GREATER_THAN expr
    (46) expr -> . expr LESS_THAN expr
    (47) expr -> . expr EQEQ expr
    (48) expr -> . expr GTEQ expr
    (49) expr -> . expr LTEQ expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr OR expr
    (52) expr -> . expr AND expr
    (53) expr -> . NOT expr
    (54) expr -> . MINUS expr
    (55) expr -> . ID LPAREN expr RPAREN
    (56) expr -> . ID LPAREN clist RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . STRING
    (60) expr -> . MSTRING
    (61) expr -> . TRUE
    (62) expr -> . FALSE
    (63) expr -> . NULL
    (64) expr -> . LPAREN expr RPAREN

    LSQUAREBR       shift and go to state 42
    NOT             shift and go to state 44
    MINUS           shift and go to state 43
    ID              shift and go to state 51
    NUMBER          shift and go to state 45
    STRING          shift and go to state 46
    MSTRING         shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    NULL            shift and go to state 50
    LPAREN          shift and go to state 29

    expr                           shift and go to state 55

state 30

    (6) funk -> FUNK ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LBRACE body . RBRACE

    RBRACE          shift and go to state 56


state 31

    (9) body -> stmt_list .

    RBRACE          reduce using rule 9 (body -> stmt_list .)
    END             reduce using rule 9 (body -> stmt_list .)


state 32

    (10) stmt_list -> stmt .
    (11) stmt_list -> stmt . stmt_list
    (10) stmt_list -> . stmt
    (11) stmt_list -> . stmt stmt_list
    (12) stmt_list -> .
    (13) stmt -> . expr SEMI_COLON
    (14) stmt -> . expr EQUAL expr SEMI_COLON
    (15) stmt -> . defvar SEMI_COLON
    (18) stmt -> . PRINT expr SEMI_COLON
    (19) stmt -> . IF LDBLBR expr RDBLBR stmt
    (20) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (21) stmt -> . WHILE LPAREN expr RPAREN stmt
    (22) stmt -> . DO stmt WHILE LPAREN expr RPAREN SEMI_COLON
    (23) stmt -> . FOR LPAREN ID EQUAL expr TO expr RPAREN stmt
    (24) stmt -> . BEGIN body END
    (25) stmt -> . RETURN expr SEMI_COLON
    (38) expr -> . expr LSQUAREBR expr RSQUAREBR
    (39) expr -> . LSQUAREBR clist RSQUAREBR
    (40) expr -> . expr QMARK expr COLON expr
    (41) expr -> . expr PLUS expr
    (42) expr -> . expr MINUS expr
    (43) expr -> . expr MULTIPLY expr
    (44) expr -> . expr DIVIDE expr
    (45) expr -> . expr GREATER_THAN expr
    (46) expr -> . expr LESS_THAN expr
    (47) expr -> . expr EQEQ expr
    (48) expr -> . expr GTEQ expr
    (49) expr -> . expr LTEQ expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr OR expr
    (52) expr -> . expr AND expr
    (53) expr -> . NOT expr
    (54) expr -> . MINUS expr
    (55) expr -> . ID LPAREN expr RPAREN
    (56) expr -> . ID LPAREN clist RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . STRING
    (60) expr -> . MSTRING
    (61) expr -> . TRUE
    (62) expr -> . FALSE
    (63) expr -> . NULL
    (64) expr -> . LPAREN expr RPAREN
    (16) defvar -> . ID COLON_COLON type
    (17) defvar -> . ID COLON_COLON type EQUAL expr

  ! reduce/reduce conflict for RBRACE resolved using rule 10 (stmt_list -> stmt .)
  ! reduce/reduce conflict for END resolved using rule 10 (stmt_list -> stmt .)
    RBRACE          reduce using rule 10 (stmt_list -> stmt .)
    END             reduce using rule 10 (stmt_list -> stmt .)
    PRINT           shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    DO              shift and go to state 38
    FOR             shift and go to state 39
    BEGIN           shift and go to state 40
    RETURN          shift and go to state 41
    LSQUAREBR       shift and go to state 42
    NOT             shift and go to state 44
    MINUS           shift and go to state 43
    ID              shift and go to state 28
    NUMBER          shift and go to state 45
    STRING          shift and go to state 46
    MSTRING         shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    NULL            shift and go to state 50
    LPAREN          shift and go to state 29

  ! RBRACE          [ reduce using rule 12 (stmt_list -> .) ]
  ! END             [ reduce using rule 12 (stmt_list -> .) ]

    stmt                           shift and go to state 32
    stmt_list                      shift and go to state 57
    expr                           shift and go to state 33
    defvar                         shift and go to state 34

state 33

    (13) stmt -> expr . SEMI_COLON
    (14) stmt -> expr . EQUAL expr SEMI_COLON
    (38) expr -> expr . LSQUAREBR expr RSQUAREBR
    (40) expr -> expr . QMARK expr COLON expr
    (41) expr -> expr . PLUS expr
    (42) expr -> expr . MINUS expr
    (43) expr -> expr . MULTIPLY expr
    (44) expr -> expr . DIVIDE expr
    (45) expr -> expr . GREATER_THAN expr
    (46) expr -> expr . LESS_THAN expr
    (47) expr -> expr . EQEQ expr
    (48) expr -> expr . GTEQ expr
    (49) expr -> expr . LTEQ expr
    (50) expr -> expr . NEQ expr
    (51) expr -> expr . OR expr
    (52) expr -> expr . AND expr

    SEMI_COLON      shift and go to state 58
    EQUAL           shift and go to state 59
    LSQUAREBR       shift and go to state 60
    QMARK           shift and go to state 61
    PLUS            shift and go to state 62
    MINUS           shift and go to state 63
    MULTIPLY        shift and go to state 64
    DIVIDE          shift and go to state 65
    GREATER_THAN    shift and go to state 66
    LESS_THAN       shift and go to state 67
    EQEQ            shift and go to state 68
    GTEQ            shift and go to state 69
    LTEQ            shift and go to state 70
    NEQ             shift and go to state 71
    OR              shift and go to state 72
    AND             shift and go to state 73


state 34

    (15) stmt -> defvar . SEMI_COLON

    SEMI_COLON      shift and go to state 74


state 35

    (18) stmt -> PRINT . expr SEMI_COLON
    (38) expr -> . expr LSQUAREBR expr RSQUAREBR
    (39) expr -> . LSQUAREBR clist RSQUAREBR
    (40) expr -> . expr QMARK expr COLON expr
    (41) expr -> . expr PLUS expr
    (42) expr -> . expr MINUS expr
    (43) expr -> . expr MULTIPLY expr
    (44) expr -> . expr DIVIDE expr
    (45) expr -> . expr GREATER_THAN expr
    (46) expr -> . expr LESS_THAN expr
    (47) expr -> . expr EQEQ expr
    (48) expr -> . expr GTEQ expr
    (49) expr -> . expr LTEQ expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr OR expr
    (52) expr -> . expr AND expr
    (53) expr -> . NOT expr
    (54) expr -> . MINUS expr
    (55) expr -> . ID LPAREN expr RPAREN
    (56) expr -> . ID LPAREN clist RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . STRING
    (60) expr -> . MSTRING
    (61) expr -> . TRUE
    (62) expr -> . FALSE
    (63) expr -> . NULL
    (64) expr -> . LPAREN expr RPAREN

    LSQUAREBR       shift and go to state 42
    NOT             shift and go to state 44
    MINUS           shift and go to state 43
    ID              shift and go to state 51
    NUMBER          shift and go to state 45
    STRING          shift and go to state 46
    MSTRING         shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    NULL            shift and go to state 50
    LPAREN          shift and go to state 29

    expr                           shift and go to state 75

state 36

    (19) stmt -> IF . LDBLBR expr RDBLBR stmt
    (20) stmt -> IF . LPAREN expr RPAREN stmt ELSE stmt

    LDBLBR          shift and go to state 76
    LPAREN          shift and go to state 77


state 37

    (21) stmt -> WHILE . LPAREN expr RPAREN stmt

    LPAREN          shift and go to state 78


state 38

    (22) stmt -> DO . stmt WHILE LPAREN expr RPAREN SEMI_COLON
    (13) stmt -> . expr SEMI_COLON
    (14) stmt -> . expr EQUAL expr SEMI_COLON
    (15) stmt -> . defvar SEMI_COLON
    (18) stmt -> . PRINT expr SEMI_COLON
    (19) stmt -> . IF LDBLBR expr RDBLBR stmt
    (20) stmt -> . IF LPAREN expr RPAREN stmt ELSE stmt
    (21) stmt -> . WHILE LPAREN expr RPAREN stmt
    (22) stmt -> . DO stmt WHILE LPAREN expr RPAREN SEMI_COLON
    (23) stmt -> . FOR LPAREN ID EQUAL expr TO expr RPAREN stmt
    (24) stmt -> . BEGIN body END
    (25) stmt -> . RETURN expr SEMI_COLON
    (38) expr -> . expr LSQUAREBR expr RSQUAREBR
    (39) expr -> . LSQUAREBR clist RSQUAREBR
    (40) expr -> . expr QMARK expr COLON expr
    (41) expr -> . expr PLUS expr
    (42) expr -> . expr MINUS expr
    (43) expr -> . expr MULTIPLY expr
    (44) expr -> . expr DIVIDE expr
    (45) expr -> . expr GREATER_THAN expr
    (46) expr -> . expr LESS_THAN expr
    (47) expr -> . expr EQEQ expr
    (48) expr -> . expr GTEQ expr
    (49) expr -> . expr LTEQ expr
    (50) expr -> . expr NEQ expr
    (51) expr -> . expr OR expr
    (52) expr -> . expr AND expr
    (53) expr -> . NOT expr
    (54) expr -> . MINUS expr
    (55) expr -> . ID LPAREN expr RPAREN
    (56) expr -> . ID LPAREN clist RPAREN
    (57) expr -> . ID
    (58) expr -> . NUMBER
    (59) expr -> . STRING
    (60) expr -> . MSTRING
    (61) expr -> . TRUE
    (62) expr -> . FALSE
    (63) expr -> . NULL
    (64) expr -> . LPAREN expr RPAREN
    (16) defvar -> . ID COLON_COLON type
    (17) defvar -> . ID COLON_COLON type EQUAL expr

    PRINT           shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    DO              shift and go to state 38
    FOR             shift and go to state 39
    BEGIN           shift and go to state 40
    RETURN          shift and go to state 41
    LSQUAREBR       shift and go to state 42
    NOT             shift and go to state 44
    MINUS           shift and go to state 43
    ID              shift and go to state 28
    NUMBER          shift and go to state 45
    STRING          shift and go to state 46
    MSTRING         shift and go to state 47
    TRUE            shift and go to state 48
    FALSE           shift and go to state 49
    NULL            shift and go to state 50
    LPAREN          shift and go to state 29

    stmt                           shift and go to state 79
    expr                           shift and go to state 33
    defvar                         shift and go to state 34

state 39

    (23) stmt -> FOR . LPAREN ID EQUAL expr TO expr RPAREN stmt

    LPAREN          shift and go to state 80


state 40
